Refactor external API service calls into clients and add resilience