@@ -1,53 +1,34 @@
 package com.agripulse.api.service.impl;
 
-import com.agripulse.api.config.OpenWeatherProperties;
+import com.agripulse.api.client.openweather.OpenWeatherClient;
 import com.agripulse.api.model.domain.WeatherData;
 import com.agripulse.api.model.exceptions.WeatherFetchException;
 import com.agripulse.api.service.WeatherService;
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonProperty;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestClient;
-
-import java.util.List;
+import org.springframework.web.client.RestClientResponseException;
 
 @Service
 public class WeatherServiceImpl implements WeatherService {
 
     private static final Logger log = LoggerFactory.getLogger(WeatherServiceImpl.class);
-    private static final String BASE_URL = "https://api.openweathermap.org/data/2.5";
 
-    private final RestClient restClient;
-    private final OpenWeatherProperties properties;
+    private final OpenWeatherClient openWeatherClient;
 
-    public WeatherServiceImpl(RestClient.Builder restClientBuilder, OpenWeatherProperties properties) {
-        this.restClient = restClientBuilder.baseUrl(BASE_URL).build();
-        this.properties = properties;
+    public WeatherServiceImpl(OpenWeatherClient openWeatherClient) {
+        this.openWeatherClient = openWeatherClient;
     }
 
     @Override
     public WeatherData getWeatherForLocation(double latitude, double longitude) {
-        OpenWeatherResponse response;
+        OpenWeatherClient.OpenWeatherResponse response;
         try {
-            response = restClient.get()
-                    .uri(uriBuilder -> uriBuilder
-                            .path("/weather")
-                            .queryParam("lat", latitude)
-                            .queryParam("lon", longitude)
-                            .queryParam("appid", properties.getApiKey())
-                            .queryParam("units", "metric")
-                            .build())
-                    .retrieve()
-                    .onStatus(status -> !status.is2xxSuccessful(),
-                            (req, res) -> {
-                                throw new WeatherFetchException(
-                                        "OpenWeather API error: HTTP " + res.getStatusCode().value());
-                            })
-                    .body(OpenWeatherResponse.class);
+            response = openWeatherClient.getWeather(latitude, longitude, "metric");
         } catch (WeatherFetchException e) {
             throw e;
+        } catch (RestClientResponseException e) {
+            throw new WeatherFetchException("OpenWeather API error: HTTP " + e.getStatusCode().value());
         } catch (RuntimeException e) {
             log.error("Failed to reach weather service", e);
             throw new WeatherFetchException("Failed to reach weather service");
@@ -58,7 +39,7 @@ public class WeatherServiceImpl implements WeatherService {
         }
 
         String description = (response.weather() != null && !response.weather().isEmpty())
-                ? response.weather().get(0).description()
+                ? response.weather().getFirst().description()
                 : "";
 
         Double rain = (response.rain() != null) ? response.rain().oneHour() : null;
@@ -70,34 +51,5 @@ public class WeatherServiceImpl implements WeatherService {
                 description,
                 rain
         );
-    }
-
-    @JsonIgnoreProperties(ignoreUnknown = true)
-    private record OpenWeatherResponse(
-            @JsonProperty("main") Main main,
-            @JsonProperty("wind") Wind wind,
-            @JsonProperty("weather") List<WeatherCondition> weather,
-            @JsonProperty("rain") Rain rain
-    ) {
-        @JsonIgnoreProperties(ignoreUnknown = true)
-        record Main(
-                @JsonProperty("temp") double temp,
-                @JsonProperty("humidity") int humidity
-        ) {}
-
-        @JsonIgnoreProperties(ignoreUnknown = true)
-        record Wind(
-                @JsonProperty("speed") double speed
-        ) {}
-
-        @JsonIgnoreProperties(ignoreUnknown = true)
-        record WeatherCondition(
-                @JsonProperty("description") String description
-        ) {}
-
-        @JsonIgnoreProperties(ignoreUnknown = true)
-        record Rain(
-                @JsonProperty("1h") Double oneHour
-        ) {}
     }
 }
